bundle med fler java moduler for å se om vi får lest mq kvitteringer.
Co-authored-by: Martine Enger <marenger@student.matnat.uio.no>